--- a/.env
+++ b/.env
@@ -12,10 +12,12 @@ STRIPE_PUBLISHABLE_KEY=pk_test_51S7FfjJQpNLCltyuyeOiFq88HTQ05C44k9Ht6DkqSSkwIP9V
 # KakiaPay
 KAKIAPAY_API_KEY=8a7c56d02d3011f0844d9be160e8ba91
 KAKIAPAY_SECRET=tsk_8a7c7de22d3011f0844d9be160e8ba91
+KAKIAPAY_SANDBOX=true
 
 # Email Service (choisir un)
 EMAIL_SERVICE=resend
 RESEND_API_KEY=re_RJbkvx2N_5bKd4GSVWmrLaTyQTa2aubZo
+
 
 # # OU
 # EMAIL_SERVICE=sendgrid
