--- a/.env
+++ b/.env
@@ -18,7 +18,8 @@ KAKIAPAY_SANDBOX=true
 EMAIL_SERVICE=resend
 RESEND_API_KEY=re_RJbkvx2N_5bKd4GSVWmrLaTyQTa2aubZo
 
-
+GMAIL_USER= spinnaldev@gmail.com
+GMAIL_APP_PASSWORD= xnxl nyla jhhf zxuy
 # # OU
 # EMAIL_SERVICE=sendgrid
 # SENDGRID_API_KEY=SG....
